# named_entity_parsing

./: Cargo.toml
src/: autodetect.rs  lib.rs  mod.rs  schemes.rs
