[package]
name = "named_entity_parsing"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Named entity parser. Used in Rusev to parse a list of tokens into a list of entities."
repository = "https://github.com/SimonTheoret/named_entity_parsing"
keywords = ["SeqEval", "NLP", "NER"]
categories = ["science", "text-processing"]

[lib]

[dependencies]
ahash = "0.8.11"
enum-iterator = "2.1.0"
flatarray = "0.6.0"

[dev-dependencies]
quickcheck = "1.0.3"
